# articulated

./: CMakeLists.txt  READ.me  package.xml
arduino/gripper/: gripper.ino
arduino/nano_stepper/: nano_stepper.ino
arduino/serial_spitter/: serial_spitter.ino
arduino/stepper0/: stepper0.ino
arduino/stepper1/: stepper1.ino
arduino/stepper2/: stepper2.ino
config/: articulated_mechanism.yaml  rviz_config.rviz
include/: articulated_action.h  ik_action.h  mechanism_calculations.h
launch/: articulated.launch
meshes/: base.STL  base.dae  link1.STL  link1.dae  link2.STL  link2.dae
msg/: serial_msg.msg
src/: articulated_action.cpp  articulated_control_gui.py  articulated_gripper.cpp  articulated_simple_client.cpp  articulated_tf_broadcaster.cpp  joint_publisher_gui.py  mechanism_calculations.cpp  pseudo_com.py  serial_com_node.py  simple_stepper_client.py  stepper_driver_client.cpp  stepper_driver_id.py  stepper_driver_server.py
srv/: StepperDriver.srv
urdf/: articulated.urdf
